--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/stargate": "^0.30.1",
     "@ladjs/graceful": "^3.0.1",
+    "@mui/styled-engine": "^5.13.2",
     "@nfteyez/sol-rayz": "^0.7.2",
     "@sei-js/core": "^1.3.3",
     "@solana/spl-governance": "^0.0.30",
